--- a/notebooks/multinomialNB_Model_Training.ipynb
+++ b/notebooks/multinomialNB_Model_Training.ipynb
@@ -156,10 +156,10 @@
     }
    ],
    "source": [
-    "#df = pd.read_csv(\"C:/Users/chand/OneDrive/Documents/Bruh/final-project-190688910-190988840/data/processed/train_emotion_dataset.csv\")\n",
-    "#dftest = pd.read_csv(\"C:/Users/chand/OneDrive/Documents/Bruh/final-project-190688910-190988840/data/processed/test_emotion_dataset.csv\")\n",
-    "df = pd.read_csv(\"C:/Users/chand/OneDrive/Documents/Bruh/final-project-190688910-190988840/data/processed/combined_samples_gt.csv\")\n",
-    "#dftest = pd.read_csv(\"C:/Users/chand/OneDrive/Documents/Bruh/final-project-190688910-190988840/data/processed/processed_test_sample_gt.csv\")\n",
+    "#df = pd.read_csv(\"/data/processed/train_emotion_dataset.csv\")\n",
+    "#dftest = pd.read_csv(\"/data/processed/test_emotion_dataset.csv\")\n",
+    "df = pd.read_csv(\"/data/processed/combined_samples_gt.csv\")\n",
+    "#dftest = pd.read_csv(\"/data/processed/processed_test_sample_gt.csv\")\n",
     "df.head()"
    ]
   },
@@ -312,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_text = [\"I love love love this project this so much hehehehehhe\"]\n",
+    "test_text = [\"I love love love this project this so much!!\"]\n",
     "test_vector = cv.transform(test_text).toarray()"
    ]
   },
@@ -1631,7 +1631,7 @@
    "outputs": [],
    "source": [
     "# Export the dataset\n",
-    "# df.to_csv(\"C:/Users/chand/OneDrive/Documents/Bruh/final-project-190688910-190988840/data/interim/multinomialNB_model_training.csv\", index = False)\n"
+    "# df.to_csv(\"/data/interim/multinomialNB_model_training.csv\", index = False)\n"
    ]
   },
   {
@@ -2172,7 +2172,7 @@
    ],
    "source": [
     "# Get the original dataset and run the model prediction on the Tweets (non-samples)\n",
-    "original_df = pd.read_csv(\"C:/Users/chand/OneDrive/Documents/Bruh/final-project-190688910-190988840/data/processed/original_dataset.csv\", encoding = \"ISO-8859-1\")\n",
+    "original_df = pd.read_csv(\"/data/processed/original_dataset.csv\", encoding = \"ISO-8859-1\")\n",
     "\n",
     "original_df = original_df.dropna()\n",
     "original_df['Predictions'] = ''\n",
